Fixed overflow in home.scss added overflow hidden in body elmnt

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -47,7 +47,7 @@ header{
                         font-size: 16px;
                         line-height: 19px;
                         text-align: center;
-                        color: #000080;
+                        color: #0D1B2A;
                         transition: all .5s ease-in-out;
                         position: relative;
                         &:hover{
