--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 // SECTION HERO
 .s-hero#missionimg {
     position: relative;
@@ -34,6 +38,7 @@
             display: flex;
             align-items: flex-start;
             flex-direction: column;
+            overflow-x: hidden;
             h1, p{
                 color: #343434;
                 font-weight: 400;
